--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/print/print.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/print/print.component.html
@@ -7,11 +7,9 @@
   <ion-label>Sales Invoice</ion-label>
 </ion-item>
 <ion-item
-  [href]="printDeliveryNoteURL"
-  target="_blank"
   lines="none"
   disabled="{{ printDeliveryNoteURL === '' ? true : false }}"
-  (click)="closePopover()"
+  (click)="printDeliveryNote()"
 >
   <ion-label>Delivery Note</ion-label>
 </ion-item>
