feat(Excel-rma): Add dynamic download for serial search page
updated submit button for sales return page

updated stock validation for sales invoice

updated cancelation flow for purchase where invoice was not being canceled

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
@@ -17,7 +17,7 @@
     color="light"
     horizontal="end"
   >
-    <ion-fab-button class="fab-position" (click)="submitSalesReturn()">
+    <ion-fab-button class="fab-position" [disabled]="submitting" (click)="submitSalesReturn()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
