Fix(Excel-rma): Fixes for production bugs
basic_rate should be on the item row.[Check accounting as well]

Bundle item stock validation issue while trying editing second time.

Limit Price Validation Error Message shows limit price, need to hide it (backend validation should not show amount).

Sales Return: Shows Returned for cancelled returns as well.

Bundle Item Sales Invoice: Shows To Deliver

Purchase Invoice for Non-Serial, Special Character Items: Doesn’t fetch Delivered By

If Bundle Item invoice contains items with +, can’t assign serials to that + item.

Items/Suppliers/Customers etc. keep like blinking? I can't select them as well when they do that.

--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
@@ -160,8 +160,8 @@
             <!-- Status Column -->
             <ng-container matColumnDef="status">
               <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-              <mat-cell *matCellDef="let row" [ngStyle]="{color: 'red'}">
-                Returned
+              <mat-cell *matCellDef="let row" [ngStyle]="{color: row.docstatus === 1 ? 'red' : 'brown'}">
+                {{ row.docstatus === 1 ? 'Returned' : 'Canceled' }}
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
