--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -248,7 +248,7 @@
             <ng-container matColumnDef="sr_no">
               <mat-header-cell *matHeaderCellDef>No. </mat-header-cell>
               <mat-cell *matCellDef="let row;let i=index ">
-                {{i+1}}
+                {{ paginator.pageIndex * paginator.pageSize + 1 + i }}
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
