feat(rma-frontend): Single Serial search and combined Item and Warehouse search added

--- a/packages/rma-warranty/src/app/serial-ui/serial-search/serial-search.page.html
+++ b/packages/rma-warranty/src/app/serial-ui/serial-search/serial-search.page.html
@@ -24,7 +24,7 @@
           <ion-button class="ion-text-right" [disabled]="!this.dataSource.length" color="tertiary" (click)="downloadSerials()">
             Download CSV
           </ion-button>
-          <ion-button [disabled]="filtersForm.invalid" color="tertiary" (click)="setFilter()">
+          <ion-button color="tertiary" (click)="setFilter()">
             Search
           </ion-button>
         </ion-col>
