fix(excel-rma): Add fixes for item-price, stock, webhooks
item price item filter is not working for +.

add base rate from column to file upload.

stock entry couple items on save.

duplicate serial must show which is duplicate

give remaining session time for session expiry.

webhook failure fixes for piping based on a decorator

add wrong serial showing for stock entry.

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -3,7 +3,12 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title> 
+            Menu  
+          </ion-title>
+          <ion-text (click)="startTimer()" slot="end" color="primary">
+            {{counter | formatTime}}
+          </ion-text>
         </ion-toolbar>
       </ion-header>
       <ion-content>
