--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -383,8 +383,8 @@
 
                 <ng-container matColumnDef="serial_no">
                     <mat-header-cell *matHeaderCellDef>Serials</mat-header-cell>
-                    <mat-cell *matCellDef="let row">
-                        <input matInput oninput="this.value = this.value.toUpperCase()" *ngIf="!row.serial_no[1]" [disabled]="row.serial_no[0] === 'Non Serial Item' ? true : false" [(ngModel)]="row.serial_no[0]" />
+                    <mat-cell *matCellDef="let row;let i = index">
+                        <input (keyup.enter)="onSerialKepUp(i)" matInput id="serials{{i}}" oninput="this.value = this.value.toUpperCase()" *ngIf="!row.serial_no[1]" [disabled]="row.serial_no[0] === 'Non Serial Item' ? true : false" [(ngModel)]="row.serial_no[0]" />
                         <p *ngIf="row.serial_no.length === 1 ? false : true">
                             {{ getSerialsInputValue(row) }}
                         </p>
