fix(excel-rma): Add fix for serial event, UI

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
           <ion-title> 
             Menu  
           </ion-title>
-          <ion-text (click)="startTimer()" slot="end" color="primary">
+          <ion-text class="ion-margin-end" (click)="startTimer()" slot="end" color="primary">
             {{counter | formatTime}}
           </ion-text>
         </ion-toolbar>
