feat(excel-rma): Add aggregated print for stock entry
sales invoice click permission issue

stock entry job reset should check for jobs that are created before this existing job.

item sync to sync items which may have failed webhooks.

print aggregation for stock entry.

--- a/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
@@ -120,6 +120,14 @@
               >
                 Clear
               </ion-button>
+              <ion-button
+                *ngIf="permissionState?.item_price?.update"
+                color="warning"
+                (click)="syncItems()"
+                fill="outline"
+              >
+                Sync All
+              </ion-button>
             </ion-col>
           </ion-row>
         </form>
