feat(excel-rma): Updated sales return, job cleanup, serial date, print
sync delete item fix.

print only TROUT for material transfer.

fix print total issue.

fix date issue with delivery note, validation based on posting date.

sales return update validations.

delete empty/reset stale jobs.

--- a/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.html
+++ b/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.html
@@ -57,6 +57,16 @@
             </mat-form-field>
           </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-button
+                *ngIf="permissionState?.jobs?.update"
+                color="warning"
+                (click)="deleteEmptyJobs()"
+                fill="outline"
+              >
+                Clean Jobs
+            </ion-button>
+        </ion-row>
       </ion-grid>
       <div class="example-container mat-elevation-z8">
         <mat-table matSort [dataSource]="dataSource">
