--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -4,9 +4,7 @@
       <ion-row>
         <ion-col class="ion-text-left">
           <ion-card-title>
-            <ion-text color="tertiary">
-              Service Invoice
-            </ion-text>
+            <ion-text color="tertiary"> Service Invoice </ion-text>
           </ion-card-title>
         </ion-col>
         <ion-col class="ion-text-right">
